[package]
name = "uav-arch-gen"
version = "0.1.0"
edition = "2021"

[features]
default = []
ai = []
hitl = []
tch = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32"
openssl = "0.10"
thiserror = "1.0"
criterion = { version = "0.4", optional = true }
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
rstest = "0.18"
