[package]
name = "uav-arch-gen"
version = "0.1.0"
edition = "2021"

[features]
default = []
ai = []
hitl = []
tch = []
bench = []

[[bench]]
name = "architecture"
harness = false

[[bench]]
name = "pid_bench"
harness = false

[dependencies]
openssl = "0.10"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
approx = "0.5"  # For floating point comparisons
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }


[dev-dependencies]
rstest = "0.18"
approx = "0.5"
criterion = "0.4"